<?xml version="1.0"?>
<package format="2">
  <name>exploration_manager</name>
  <version>0.0.0</version>
  <description>The fast_planner package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>bspline</depend>
  <depend>traj_utils</depend>
  <depend>plan_manage</depend>
  <depend>file_utils</depend>
  <depend>time_utils</depend>
  <depend>process_utils</depend>
  <depend>map_process</depend>
  <depend>vis_utils</depend>
  <depend>lkh_solver</depend>
  <depend>fastex_msgs</depend>
</package>
