<?xml version="1.0"?>
<package format="2">
  <name>bspline_opt</name>
  <version>0.0.0</version>
  <description>The bspline_opt package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>plan_env</depend>
</package>
