<?xml version="1.0"?>
<package format="2">
  <name>map_process</name>
  <version>0.0.0</version>
  <description>The map_process package</description>
  <maintainer email="zxx@todo.todo">zxx</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>file_utils</depend>
  <depend>time_utils</depend>
  <depend>vis_utils</depend>
  <depend>vdb_utils</depend>
  <depend>fastex_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>traj_utils</depend>
  <depend>process_utils</depend>
</package>
