<?xml version="1.0"?>
<package format="2">
  <name>path_searching</name>
  <version>0.0.0</version>
  <description>The path_searching package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>plan_env</depend>
  <depend>process_utils</depend>
</package>
