<?xml version="1.0"?>
<package format="2">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>The plan_env package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vis_utils</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
</package>
