<?xml version="1.0"?>
<package format="2">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>The fast_planner package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vis_utils</depend>
  <depend>quadrotor_msgs</depend>
  <depend>poly_traj</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
</package>
