<?xml version="1.0"?>
<package format="2">
  <name>vis_utils</name>
  <version>0.0.1</version>
  <description>Visualization utilities for FASTEX</description>
  <maintainer email="author@example.com">Author</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>